Added Randomizer and Fixed Bugs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="btns">
 
             <button onclick="reset()">Reset</button>
-            <button>Randomize</button>
+            <button onclick="randomizer(this)">Randomize</button>
 
         </div>
 
@@ -32,6 +32,10 @@
             <div class="grid-item"></div>
 
         </div>
+
+        <footer>
+            <h3 id="foot"><i>Page made by Alexander González Covic</i></h3>
+        </footer>
 
     </main>
 
